--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,16 +4,32 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
-
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
+        {{ encore_entry_link_tags('app') }}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block header %}
+            <nav>
+                <ul>
+                    <li><a href="">Accueil</a></li>
+                    <li><a href="">Tournois</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href=""></a></li>
+                    <li><a href="">S'inscrire</a></li>
+                    <li><a href="">Se connecter</a></li>
+                    <li><a href="">Se déconnecter</a></li>
+                </ul>
+            </nav>
+        {% endblock %}
+
+        {% block main %}
+        
+        {% endblock %}
+
+        {% block footer %}
+
+        {% endblock %}
+
     </body>
+    {{ encore_entry_script_tags('app') }}
+
 </html>
