--- a/templates/reset_password/reset_password.html.twig
+++ b/templates/reset_password/reset_password.html.twig
@@ -2,19 +2,9 @@
 
 {% block title %}Hello ResetPasswordController!{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>D:/UNKNOWN/DEV Web/Symfony/Exo/hackaton_Ben_Algan/src/Controller/ResetPasswordController.php</code></li>
-        <li>Your template at <code>D:/UNKNOWN/DEV Web/Symfony/Exo/hackaton_Ben_Algan/templates/reset_password/index.html.twig</code></li>
-    </ul>
-</div>
+{% block main %}
+    {{form_start(resetForm)}}
+            {{form_widget(resetForm)}}
+            <button>Envoyer</button>
+        {{form_end(resetForm)}}
 {% endblock %}
