--- a/assets/styles/abstract/_variable.scss
+++ b/assets/styles/abstract/_variable.scss
@@ -1,4 +1,5 @@
-$primarycolor : #BFECFF;
-$secondarycolor : #CDC1FF;
-$accentcolor : #FFF6E3;
-$backgroundcolor: #884A74;
+$primarycolor : #090909;
+$secondarycolor : #FFFFFF;
+$accentcolor : #f17941;
+$hovercolor : #faa77a;
+$backgroundcolor: #292929;
