--- a/assets/styles/base/_general.scss
+++ b/assets/styles/base/_general.scss
@@ -1,16 +1,14 @@
 @use "../abstract/variable" as var;
 
 body {
-    margin: 0 10%;
-    margin-top: 3rem;
+    background-color: var.$backgroundcolor;
+    color: var.$secondarycolor;
 
     h1 {
-        text-align: center;
-        margin-bottom: 2rem;
         text-shadow: 0 0 5px black;
-        a {
-            color: var.$accentcolor;
-        }
+        display: inline;
+        font-size: 32px;
+        color: var.$accentcolor;
     }
 }
 
