--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,3 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Accueil{% endblock %}
+
+
+    {% block main %}
+        <div>
+            <p>Bienvenu sur </p>
+            <h1>UltimateArena.gg</h1>
+        </div>
+        <div>
+            <p>Rejoignez l'arène, devenez légendaire !</p>
+        </div>
+
+        {# block preview last tournament #}
+
+        <section>
+            
+        </section>
+
+    {% endblock %}
+
