--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,18 +4,14 @@
 
 
     {% block main %}
-        <div>
-            <p>Bienvenu sur </p>
-            <h1>UltimateArena.gg</h1>
-        </div>
-        <div>
-            <p>Rejoignez l'arène, devenez légendaire !</p>
-        </div>
-
-        {# block preview last tournament #}
-
-        <section>
-            
+        <section id="index">
+            <div>
+                <p>Bienvenu sur </p>
+                <h1>UltimateArena.gg</h1>
+            </div>
+            <div>
+                <p>Rejoignez l'arène, devenez légendaire !</p>
+            </div>
         </section>
 
     {% endblock %}
