--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -39,3 +39,18 @@ header {
         }
     }
 }
+
+@media screen and (max-width: 1024px) {
+   header {
+        nav {
+            ul {
+                li {
+                    padding: 0.5rem 1rem;
+                    a {
+                        font-size: 20px;
+                    }
+                }
+            }
+        }
+   }
+}
