--- a/templates/reset_password/reset_password.html.twig
+++ b/templates/reset_password/reset_password.html.twig
@@ -3,8 +3,10 @@
 {% block title %}Hello ResetPasswordController!{% endblock %}
 
 {% block main %}
+<section id="form">
     {{form_start(resetForm)}}
-            {{form_widget(resetForm)}}
-            <button>Envoyer</button>
-        {{form_end(resetForm)}}
+        {{form_widget(resetForm)}}
+        <button>Envoyer</button>
+    {{form_end(resetForm)}}
+</section>
 {% endblock %}
