--- a/templates/reset_password_request/reset_password_request.html.twig
+++ b/templates/reset_password_request/reset_password_request.html.twig
@@ -3,8 +3,10 @@
 {% block title %}Hello ResetPasswordRequestController!{% endblock %}
 
 {% block main %}
+<section id="form">
     {{form_start(requestForm)}}
         {{form_widget(requestForm)}}
         <button>Envoyer</button>
     {{form_end(requestForm)}}
+</section>
 {% endblock %}
